# hayward-tech-suite

./: .env.example  .gitignore  CHANGELOG.md  CHANGES_MADE.md  CLEANUP_COMPLETED_SUMMARY.md  CLEANUP_SUMMARY.txt  CLEANUP_VISUALIZATION.txt  CODE_REVIEW_AND_UPDATES_SUMMARY.md  CODE_REVIEW_INDEX.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_ANALYSIS_RESULTS.md  CRITICAL_FINDINGS.md  DEBLOAT_IMPLEMENTATION.md  EXECUTIVE_SUMMARY.md  FINAL_REVIEW_SUMMARY.md  FIX_SUMMARY.md  HaywardTechSuite.spec  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  PROJECT_RENAME_SUMMARY.md  QUICK_ACTION_GUIDE.md  README.md  README_CODE_REVIEW.md  RESTORE_POINT_FIX.md  RESTORE_POINT_IMPROVEMENTS.md  SPECIFIC_EXAMPLES.md  START_HERE.md  SYSTEM_TOOLS_IMPLEMENTATION.md  TASK_COMPLETION_DEBLOAT.md  TASK_COMPLETION_RENAME.md  TASK_COMPLETION_REPORT.md  TASK_COMPLETION_SUMMARY.md  VISUAL_CHANGES_SUMMARY.md  build.py  pyproject.toml  requirements.txt
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml  release.yml
config/: config.yaml  registry_tweaks.json  system_tools.json
docs/: BEFORE_AFTER_COMPARISON.md  COMPLETE_INTEGRATION_REPORT.md  DANGER_TAB_AND_BACKUP_FIX.md  DANGER_ZONE_TAB_UPDATE.md  DEBLOAT_FEATURE.md  FLICKERING_FIX.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_STATUS.md  NEW_FEATURES.md  QUICK_REFERENCE.md  REGISTRY_BACKUP_MANAGEMENT.md  SYSTEM_TOOLS_USER_GUIDE.md  TRANSFORMATION_SUMMARY.md  UI_INTEGRATION_SUMMARY.md  UI_MOCKUPS.md  UI_VISUAL_GUIDE.md  VALIDATION_FIX_SUMMARY.md  VISUAL_CHANGES_SUMMARY.md  registry_tweaks.md
docs/code_review/: CLEANUP_COMPLETED_SUMMARY.md  CLEANUP_SUMMARY.txt  CLEANUP_VISUALIZATION.txt  CODE_REVIEW_INDEX.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_ANALYSIS_RESULTS.md  CRITICAL_FINDINGS.md  EXECUTIVE_SUMMARY.md  QUICK_ACTION_GUIDE.md  README_CODE_REVIEW.md
src/: __init__.py  main.py
src/core/: __init__.py  automated_remediation.py  backup_manager.py  bloat_remover.py  monitoring.py  network_diagnostics.py  performance_profiler.py  registry_manager.py  restore_point_manager.py  security_scanner.py  system_operations.py  system_tools_installer.py
src/gui/: __init__.py  main_window.py
src/gui/dialogs/: __init__.py  remediation_dialog.py
src/gui/tabs/: __init__.py  backup_tab.py  danger_tab.py  debloat_tab.py  diagnostics_tab.py  maintenance_tab.py  monitoring_tab.py  registry_hacks_tab.py  security_tab.py  settings_tab.py  system_tools_tab.py
src/utils/: __init__.py  admin_state.py  config.py  logger.py  resource_path.py  validators.py
tests/: __init__.py  conftest.py  test_automated_remediation.py  test_config.py  test_monitoring.py  test_network_diagnostics.py  test_performance_profiler.py  test_registry_enhancements.py  test_remediation_dialog.py  test_resource_path.py  test_security_scanner.py  test_security_tab_state.py  test_system_operations.py  test_validators.py  verify_validation_fix.py
